# mytv

./: CMakeLists.txt  README.md
front/: index.html  script.js  style.css
front/css/: base.css  catalog.css  player.css
front/js/: api.js  app.js  player.js  views.js
input/: source.json
script/: curl.sh
src/: https_json_client.cpp  https_json_client.h  json_parser.cpp  json_parser.h  main.cpp  web_server.cpp  web_server.h
